--- a/index.html
+++ b/index.html
@@ -65,15 +65,21 @@
 
         <div class="main-glass-panel">
             <aside class="sidebar-left">
-                
-                <div id="dropdownMenu" class="dropdown-content">
-                    <a href="javascript:void(0)" onclick="createFolder()">
-                        <i class="fa-solid fa-folder-plus"></i> Folder Baru
-                    </a>
-                    <a href="javascript:void(0)" onclick="triggerUploadModal()">
-                        <i class="fa-solid fa-cloud-arrow-up"></i> Upload File
-                    </a>
+                <div class="new-btn-wrapper" id="dropdownContainer">
+                    <button id="newBtnMain" class="btn-pill new-btn">
+                        <i class="fa-solid fa-plus"></i> New
+                    </button>
+                    
+                    <div id="dropdownMenu" class="dropdown-content">
+                        <a href="javascript:void(0)" onclick="createFolder()">
+                            <i class="fa-solid fa-folder-plus"></i> Folder Baru
+                        </a>
+                        <a href="javascript:void(0)" onclick="triggerUploadModal()">
+                            <i class="fa-solid fa-cloud-arrow-up"></i> Upload File
+                        </a>
+                    </div>
                 </div>
+
                 <nav class="sidebar-menu">
                     <a onclick="handleMenuClick(this, 'root')" class="nav-item active">
                         <i class="fa-solid fa-house"></i> Beranda
@@ -85,7 +91,7 @@
                         <i class="fa-solid fa-computer"></i> Komputer
                     </a>
                     <a onclick="handleMenuClick(this, 'shared')" class="nav-item">
-                        <i class="fa-solid fa-user-group"></i> Dibagikan kepada saya
+                        <i class="fa-solid fa-user-group"></i> Dibagikan
                     </a>
                     <a onclick="handleMenuClick(this, 'recent')" class="nav-item">
                         <i class="fa-solid fa-clock"></i> Terbaru
@@ -93,24 +99,15 @@
                     <a onclick="handleMenuClick(this, 'starred')" class="nav-item">
                         <i class="fa-solid fa-star"></i> Berbintang
                     </a>
-                    <a onclick="handleMenuClick(this, 'spam')" class="nav-item">
-                        <i class="fa-solid fa-circle-exclamation"></i> Spam
-                    </a>
                     <a onclick="handleMenuClick(this, 'trash')" class="nav-item">
                         <i class="fa-solid fa-trash-can"></i> Sampah
                     </a>
                 </nav>
 
                 <div class="storage-widget">
-                    <div class="storage-label">
-                        <i class="fa-solid fa-cloud"></i> Storage
-                    </div>
-                    <div class="progress-track">
-                        <div id="storageBar" class="progress-fill" style="width: 0%;"></div>
-                    </div>
-                    <div class="storage-text">
-                        <span id="storageUsed">0.00 MB</span> / 2 GB
-                    </div>
+                    <div class="storage-label"><i class="fa-solid fa-cloud"></i> Storage</div>
+                    <div class="progress-track"><div id="storageBar" class="progress-fill"></div></div>
+                    <div class="storage-text"><span id="storageUsed">0.00 MB</span> / 2 GB</div>
                 </div>
             </aside>
 
